@@ -1,4 +1,4 @@
-FROM maven:3.9.2-eclipse-temurin-20 as build
+FROM maven:3.9.4-eclipse-temurin-21 as build
 WORKDIR /helidon
 ADD pom.xml .
 RUN mvn package -Dmaven.test.skip -Declipselink.weave.skip
@@ -6,9 +6,9 @@ ADD src src
 RUN mvn package -DskipTests
 RUN echo "done!"
 
-FROM eclipse-temurin:20-jdk
+FROM eclipse-temurin:21-jdk
 WORKDIR /helidon
 COPY --from=build /helidon/target/k8s-helidon-app.jar ./
 COPY --from=build /helidon/target/libs ./libs
-CMD ["java", "--enable-preview" ,"-jar", "k8s-helidon-app.jar"]
+CMD ["java", "-jar", "k8s-helidon-app.jar"]
 EXPOSE 8080
